[tool.poetry]
name = "queueflow"
version = "0.1.0"
description = ""
authors = ["Peerachet Porkaew <peerachet.porkaew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llfn = "^0.1.7"
langchain-community = "^0.3.1"
langchain-core = "^0.3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
